convert enrivonment.ts file into config.json, remove url file from config.json and move retrieve URL from config.json to dynamic config
