# tdm-be/routers/traitment.ts
@@ -4,7 +4,9 @@ import multer from 'multer';
 import fs from 'fs';
 import axios from 'axios';
 
-import environment from '../environment';
+
+const rawdata = fs.readFileSync('config.json', 'utf-8');
+const environment = JSON.parse(rawdata);
 import { StatusEnum } from '../model/StatusEnum';
 const router = express.Router();
 var currentTraitments: Traitment[] = require('../model/Traitment');
@@ -68,7 +70,7 @@ router.post('/start', (req: Request<{}, {}, Traitment>, res) => {
     const fileData = fs.readFileSync(`${environment.fileFolder}${traitment.file}`);
     traitment.timestamp = new Date().getTime();
     traitment.status = StatusEnum.WRAPPER_RUNNING;
-    res.send({ message: `Enrichissement démarré vous allez recevoir un email.`, url: `Un suivi est disponible à l\'url ${environment.url}?id=${traitment.timestamp}` });
+    res.send({ message: `Enrichissement démarré vous allez recevoir un email.`, url: `Un suivi est disponible à l\'url https://${req.hostname}?id=${traitment.timestamp}` });
     axios.post(url, fileData, { responseType: 'arraybuffer', params: { value: traitment.wrapper.parameters?.find((p) => p.name === 'value')?.value }, timeout: 600000 }).then((wrapperRes) => {
         const bin: Buffer = Buffer.from(wrapperRes.data, 'binary');
         fs.writeFileSync(environment.dumpFile, bin);
@@ -76,8 +78,8 @@ router.post('/start', (req: Request<{}, {}, Traitment>, res) => {
         console.log(`Wrapper Done for ${traitment.timestamp}`);
         const conf = {
             headers: {
-                'X-Webhook-Success': `${environment.url}/webhook/success?id=${traitment.timestamp}`,
-                'X-Webhook-Failure': `${environment.url}/webhook/failure?id=${traitment.timestamp}`,
+                'X-Webhook-Success': `https://${req.hostname}/webhook/success?id=${traitment.timestamp}`,
+                'X-Webhook-Failure': `https://${req.hostname}/webhook/failure?id=${traitment.timestamp}`,
             },
             timeout: 600000
         }
@@ -175,7 +177,6 @@ router.post('/upload', upload.single('file'), (req: any, res: Response) => {
 //Route to retrieve traitment status
 router.get('/status', (req, res) => {
     const { id } = req.query;
-    console.log(`Webhook ${id}`);
     const traitment: Traitment = currentTraitments.filter((t) => t.timestamp + '' === id)[0];
     let status: StatusEnum = StatusEnum.UNKNOWN;
     if (traitment) {
