# tdm-be/routers/webhook.ts
@@ -2,9 +2,9 @@ import express from 'express';
 import { sendEmail, EmailOptions } from '../service/email-sender';
 import { Traitment } from '../model/Traitment';
 import axios from 'axios';
-import environment from '../environment';
 import fs from 'fs';
 import { StatusEnum } from '../model/StatusEnum';
+import { SwaggerApi } from '../model/Config';
 const router = express.Router();
 var currentTraitments: Traitment[] = require('../model/Traitment');
 var config = require('../model/Config');
@@ -12,10 +12,10 @@ var config = require('../model/Config');
 //Webhook of success after traitment done
 router.post('/success', (req, res) => {
     const { id } = req.query;
-    console.log(`Webhook ${id}`);
     const traitment: Traitment = currentTraitments.filter((t) => t.timestamp + '' === id)[0];
+    const enrichment = config.enrichments.filter((enrichment: SwaggerApi) => traitment.enrichment.url.indexOf(enrichment.url) > -1)[0];
     if (traitment) {
-        axios.post(environment.retrieveUrl, [{ value: traitment.retrieveValue }], { responseType: 'arraybuffer' }).then((retrieveRes) => {
+        axios.post(enrichment.url + enrichment.retrieveUrl, [{ value: traitment.retrieveValue }], { responseType: 'arraybuffer' }).then((retrieveRes) => {
             traitment.status = StatusEnum.FINISHED;
             // Process the payload as needed
             const bin: Buffer = Buffer.from(retrieveRes.data, 'binary');
@@ -24,12 +24,11 @@ router.post('/success', (req, res) => {
             const mailOptions: EmailOptions = {
                 to: traitment.mail,
                 subject: config.mailSuccess.subject,
-                text: config.mailSuccess.text + `\n ${environment.url}/downloads/${traitment.timestamp}.tar.gz`,
+                text: config.mailSuccess.text + `\n ${req.protocol}://${req.hostname}/downloads/${traitment.timestamp}.tar.gz`,
             };
             sendEmail(mailOptions);
             res.send('Email envoyé');
         }, (error) => {
-            traitment.status = StatusEnum.FINISHED_ERROR;
             console.log(error);
             res.status(500).send('Error retrieving file');
         });
@@ -45,6 +44,7 @@ router.post('/success', (req, res) => {
 router.post('/failure', (req, res) => {
     const { id } = req.query;
     const traitment: Traitment = currentTraitments.filter((traitment) => traitment.timestamp === id)[0];
+    traitment.status = StatusEnum.FINISHED_ERROR;
     if (traitment) {
         currentTraitments = currentTraitments.filter((t) => t.timestamp !== traitment.timestamp);
         // Process the payload as needed
